[FIX] Update socket connection to use dynamic server URL from window location

--- a/frontend/src/pages/homepage.html
+++ b/frontend/src/pages/homepage.html
@@ -84,7 +84,8 @@
         const token = localStorage.getItem('token');
 
           if(token) {
-            socket = io(config.serverUrl + '/game', {
+            const serverUrl = window.location.origin;
+            socket = io(serverUrl + '/game', {
                 query: {
                     token: token
                 }
