--- a/frontend/src/pages/profile.html
+++ b/frontend/src/pages/profile.html
@@ -274,6 +274,144 @@
       color: #f44336;
       border: 1px solid rgba(244, 67, 54, 0.3);
     }
+
+    .stats-section {
+      margin-top: 2rem;
+      padding-top: 2rem;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+    }
+    .stats-header {
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+    .stats-header h2 {
+      color: #fff;
+      font-size: 1.5rem;
+      margin-bottom: 0.3rem;
+    }
+    .stats-header p {
+      color: rgba(255, 255, 255, 0.6);
+      font-size: 0.9rem;
+    }
+    .stats-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+      margin-bottom: 1.5rem;
+    }
+    .stat-card {
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 1.5rem;
+      text-align: center;
+      transition: all 0.3s;
+    }
+    .stat-card:hover {
+      background: rgba(255, 255, 255, 0.05);
+      border-color: rgba(255, 255, 255, 0.2);
+      transform: translateY(-2px);
+    }
+    .stat-icon {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
+    }
+    .stat-value {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #fff;
+      margin-bottom: 0.3rem;
+    }
+    .stat-label {
+      font-size: 0.85rem;
+      color: rgba(255, 255, 255, 0.6);
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+    }
+    .recent-games {
+      margin-top: 1.5rem;
+    }
+    .recent-games h3 {
+      color: #fff;
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+    .game-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+    .game-item {
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 8px;
+      padding: 1rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      transition: all 0.3s ease;
+    }
+    .game-item:hover {
+      background: rgba(255, 255, 255, 0.05);
+      border-color: rgba(255, 255, 255, 0.2);
+    }
+    .game-item.win {
+      border-left: 3px solid #4caf50;
+    }
+    .game-item.loss {
+      border-left: 3px solid #f44336;
+    }
+    .game-icon {
+      font-size: 2rem;
+      flex-shrink: 0;
+    }
+    .game-info {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 0.3rem;
+    }
+    .game-result {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: 0.9rem;
+      font-weight: 600;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+    }
+    .game-result.win {
+      color: #4caf50;
+      background: rgba(76, 175, 80, 0.1);
+    }
+    .game-result.loss {
+      color: #f44336;
+      background: rgba(244, 67, 54, 0.1);
+    }
+    .game-details {
+      flex: 1;
+    }
+    .game-name {
+      color: #fff;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+    .game-date {
+      color: rgba(255, 255, 255, 0.5);
+      font-size: 0.85rem;
+    }
+    .game-score {
+      color: rgba(255, 255, 255, 0.7);
+      font-weight: 600;
+      margin-right: 1rem;
+    }
+    .no-games {
+      text-align: center;
+      padding: 2rem;
+      color: rgba(255, 255, 255, 0.5);
+      font-style: italic;
+    }
   </style>
 </head>
 <body>
@@ -315,6 +453,59 @@
           <div class="info-group full-width">
             <div class="info-label">Bio</div>
             <div id="displayBio" class="info-value empty">No bio</div>
+          </div>
+        </div>
+        
+        <!-- Statistics Section -->
+        <div class="stats-section">
+          <div class="stats-header">
+            <h2>📊 Statistics</h2>
+            <p>Your gaming performance</p>
+          </div>
+
+          <div class="stats-grid">
+            <div class="stat-card">
+              <div class="stat-icon">🎮</div>
+              <div class="stat-value" id="statTotalGames">0</div>
+              <div class="stat-label">Total Games</div>
+            </div>
+
+            <div class="stat-card">
+              <div class="stat-icon">🏆</div>
+              <div class="stat-value" id="statTotalWins">0</div>
+              <div class="stat-label">Wins</div>
+            </div>
+
+            <div class="stat-card">
+              <div class="stat-icon">📈</div>
+              <div class="stat-value" id="statWinRate">0%</div>
+              <div class="stat-label">Win Rate</div>
+            </div>
+
+            <div class="stat-card">
+              <div class="stat-icon">🔥</div>
+              <div class="stat-value" id="statCurrentStreak">0</div>
+              <div class="stat-label">Current Streak</div>
+            </div>
+
+            <div class="stat-card">
+              <div class="stat-icon">⭐</div>
+              <div class="stat-value" id="statBestStreak">0</div>
+              <div class="stat-label">Best Streak</div>
+            </div>
+
+            <div class="stat-card">
+              <div class="stat-icon">⏱️</div>
+              <div class="stat-value" id="statPlaytime">0h</div>
+              <div class="stat-label">Play Time</div>
+            </div>
+          </div>
+
+          <div class="recent-games">
+            <h3>🕹️ Recent Games</h3>
+            <div class="game-list" id="recentGamesList">
+              <div class="no-games">No games played yet</div>
+            </div>
           </div>
         </div>
       </div>
@@ -429,6 +620,8 @@
         updateDisplayField('displayLastName', data.last_name, 'Not provided');
         document.getElementById('displayEmail').textContent = data.email || '-';
         updateDisplayField('displayBio', data.bio, 'No bio');
+
+        loadStatistics();
 
         document.getElementById('username').value = data.username || '';
         document.getElementById('firstName').value = data.first_name || '';
@@ -552,7 +745,100 @@
       }, 5000);
     }
 
+    function loadStatistics() {
+      fetch('/api/profile/stats', {
+        headers: { 'Authorization': 'Bearer ' + token }
+      })
+      .then(res => res.json())
+      .then(stats => {
+        document.getElementById('statTotalGames').textContent = stats.total_games || 0;
+        document.getElementById('statTotalWins').textContent = stats.total_wins || 0;
+
+        const winRate = stats.total_games > 0
+          ? Math.round((stats.total_wins / stats.total_games) * 100)
+          : 0;
+        document.getElementById('statWinRate').textContent = winRate + '%';
+
+        document.getElementById('statCurrentStreak').textContent = stats.current_win_streak || 0;
+        document.getElementById('statBestStreak').textContent = stats.best_win_streak || 0;
+        const hours = Math.floor((stats.total_playtime || 0) / 3600);
+        const minutes = Math.floor(((stats.total_playtime || 0) % 3600) / 60);
+        document.getElementById('statPlaytime').textContent = hours > 0
+          ? `${hours}h ${minutes}m`
+          : `${minutes}m`;
+
+        loadRecentGames();
+      })
+      .catch(err => {
+        console.error('Error loading statistics:', err);
+      });
+    }
+
+    async function loadRecentGames() {
+      const gamesList = document.getElementById('recentGamesList');
+      const token = localStorage.getItem('token');
+
+      if (!token) {
+        gamesList.innerHTML = '<div class="no-games">Please log in to see recent games</div>';
+        return;
+      }
+
+      try {
+        const response = await fetch('/api/games/recent?limit=10', {
+          headers: {
+            'Authorization': `Bearer ${token}`
+          }
+        });
+
+        if (!response.ok) {
+          throw new Error('Failed to load recent games');
+        }
+
+        const games = await response.json();
+
+        if (!games || games.length === 0) {
+          gamesList.innerHTML = '<div class="no-games">No recent games</div>';
+          return;
+        }
+
+        gamesList.innerHTML = games.map(game => {
+          const date = new Date(game.played_at);
+          const formattedDate = date.toLocaleDateString('en-US', {
+            month: 'short',
+            day: 'numeric',
+            hour: '2-digit',
+            minute: '2-digit'
+          });
+
+          const resultClass = game.result === 'win' ? 'win' : 'loss';
+          const resultIcon = game.result === 'win' ? '🏆' : '❌';
+
+          return `
+            <div class="game-item ${resultClass}">
+              <div class="game-icon">🎮</div>
+              <div class="game-info">
+                <div class="game-name">${game.game_name}</div>
+                <div class="game-date">${formattedDate}</div>
+              </div>
+              <div class="game-score">Score: ${game.score}</div>
+              <div class="game-result ${resultClass}">${resultIcon} ${game.result.toUpperCase()}</div>
+            </div>
+          `;
+        }).join('');
+
+      } catch (error) {
+        console.error('Error loading recent games:', error);
+        gamesList.innerHTML = '<div class="no-games">Failed to load recent games</div>';
+      }
+    }
+
     loadProfile();
+
+    document.addEventListener('visibilitychange', function() {
+      if (!document.hidden) {
+        loadStatistics();
+      }
+    });
   </script>
 </body>
 </html>
